--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Add Font Awesome for icons -->
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -71,7 +71,10 @@
       <section class="hero">
         <div class="hero-content">
           <h1 class="hero-title">
-            <span class="title-line">Stay Sharp.</span>
+            <span class="title-line"
+              ><span class="stay"> Stay</span> Sharp
+              <span class="dot">.</span></span
+            >
             <span class="title-accent">✂️</span>
           </h1>
           <p class="hero-subtitle">
