white color for paragraph in bookings. changed onboarding title

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="hero-content">
           <h1 class="hero-title">
             <span class="title-line"
-              ><span class="stay"> Stay</span> Sharp
+              ><span class="stay"> HT</span> CUTZ
               <span class="dot">.</span></span
             >
             <span class="title-accent">✂️</span>
