mobile version for landing page

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <h2>Your Local Barbershop Since 1995</h2>
           <p>
             Experience the perfect blend of traditional barbering and modern
-            style at Hometown Cutz.
+            style.
           </p>
         </div>
         <div class="about-image">
