Refined services. Cards left todo.

--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
     <main class="services-page">
       <div class="services-hero">
         <h1>Our Services</h1>
-        <p>Professional Grooming for the Modern Gentleman</p>
+        <p>Explore our range of grooming services</p>
       </div>
 
       <div class="services-container">
